--- a/TitanicKaggle.ipynb
+++ b/TitanicKaggle.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "5      0            330877   8.4583   NaN        Q  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
        "5  14.0      0      0     7538   9.2250   NaN        S  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +675,7 @@
        "[891 rows x 9 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -826,7 +826,7 @@
        "4            5         0       3    0  35.0      0      0   8.0500"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -835,8 +835,8 @@
     "# retirar colunas de texto. Elas não entrarão no modelo inicial.\n",
     "df_train_num = df_train.columns[df_train.dtypes != 'object'] #retirou apenas os rótulos\n",
     "\n",
-    "df_train_numerico = df_train.loc[:, df_train_num]\n",
-    "df_train_numerico.head(5)"
+    "df_train = df_train.loc[:, df_train_num]\n",
+    "df_train.head(5)"
    ]
   },
   {
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -952,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +966,7 @@
        "Name: Sex, dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -979,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1012,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1041,6 +1041,226 @@
     "#df_test_columnsNames = df_test.columns[df_test.dtypes != 'object']\n",
     "df_test = df_test.loc[:,df_test.columns[df_test.dtypes != 'object']]\n",
     "df_test.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#até o momento estamos trabalhando então com 2 dataset tratados: df_test e df_train\n",
+    "#O próximo passo é a construção do modelo."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Criação do Modelo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Separando a base de treino em X e Y. (Lembrete, estamos tentando criar uma função do tipo y = ax)\n",
+    "X = df_train.drop(['PassengerId', 'Survived'], axis = 1) #retirar a coluna survived pois ela será o y\n",
+    "y = df_train.Survived\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.33, random_state=42)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Regressão Linear"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LinearRegression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "modelo_regressao_linear=LinearRegression().fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred_regressao_linear = modelo_regressao_linear.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coeficiente a: -0.1443956550232961\n",
+      "Coeficiente b (intercept): 0.6855644476614444\n",
+      "MSE: 0.13207797710390057\n",
+      "R²: 0.4526625734539549\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Avaliação do Modelo\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "print(f'Coeficiente a: {modelo_regressao_linear.coef_[0]}')\n",
+    "print(f'Coeficiente b (intercept): {modelo_regressao_linear.intercept_}')\n",
+    "print(f'MSE: {mean_squared_error(y_test, y_pred_regressao_linear)}')\n",
+    "print(f'R²: {r2_score(y_test, y_pred_regressao_linear)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Note que R² significa que o modelo não está convergindo aos dados reais. Será que outros modelos irão convergir melhor?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Arvore de regressão"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "modelo_arvore_regressao = tree.DecisionTreeRegressor(random_state=42).fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred_arvoreReg=modelo_arvore_regressao.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE: 0.24868173258003767\n",
+      "R²: -0.030548941798941742\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Avaliação do modelo:\n",
+    "print(f'MSE: {mean_squared_error(y_test, y_pred_arvoreReg)}')\n",
+    "print(f'R²: {r2_score(y_test, y_pred_arvoreReg)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Note que este aparenta ser o pior modelo possível. R² < 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### KNN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import KNeighborsRegressor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "modelo_KNN = KNeighborsRegressor(n_neighbors=2).fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred_KNN = modelo_KNN.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R²: -0.018452380952380887\n",
+      "MSE: 0.2457627118644068\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Avaliando modelo\n",
+    "print(f'R²: {r2_score(y_test, y_pred_KNN)}')\n",
+    "print(f'MSE: {mean_squared_error(y_test, y_pred_KNN)}')"
    ]
   },
   {
